--- a/ecoweb-site/package.json
+++ b/ecoweb-site/package.json
@@ -51,6 +51,7 @@
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
+    "react-confirm-toast": "^2.0.2",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
